[gd_scene load_steps=3 format=2]

[ext_resource path="res://world/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="World" parent="." instance=ExtResource( 1 )]

[node name="RentTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="FoodTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="RentTimer" to="." method="_on_RentTimer_timeout"]
[connection signal="timeout" from="FoodTimer" to="." method="_on_FoodTimer_timeout"]
